Modificacion del About me

--- a/src/i18n/Español/es.json
+++ b/src/i18n/Español/es.json
@@ -12,11 +12,7 @@
 
   "Titu_Acerca": "Acerca de Mi",
 
-  "TxtAcerca1": "Soy un entusiasta de la creatividad con un amor profundo por la arquitectura, la programación, el diseño y el bricolaje. Desde mi temprana fascinación por los espacios arquitectónicos hasta mi pasión por la codificación y el diseño innovador, encuentro en cada campo una oportunidad para expresar mi creatividad y habilidades.",
-
-  "TxtAcerca2": "La arquitectura me cautiva con su capacidad para influir en nuestras vidas y emociones a través de los espacios que crea. La programación me permite transformar ideas abstractas en soluciones digitales tangibles. Mientras tanto, el diseño y el bricolaje me ofrecen un lienzo tangible donde puedo fusionar estética y funcionalidad de manera única. En cada proyecto, busco explorar nuevos límites, desafiarme y encontrar la belleza en la intersección de la forma y la función.",
-  
-  "TxtAcerca3":"Mi mundo está definido por la búsqueda constante de nuevas experiencias y desafíos creativos. Desde la planificación de proyectos arquitectónicos hasta la creación de soluciones tecnológicas, cada paso que doy refleja mi pasión por la innovación y el diseño. Soy un eterno aprendiz y creador, impulsado por el deseo de dejar una marca positiva en el mundo a través de mi trabajo y mi creatividad.",
+  "TxtAcerca1": "Soy un entusiasta de la creatividad apasionado por la programación web, la arquitectura, el diseño y el bricolaje. La programación web me permite transformar ideas abstractas en soluciones digitales tangibles, creando experiencias interactivas y funcionales para los usuarios. Busco constantemente nuevas experiencias y desafíos, reflejando mi pasión por la innovación y el deseo de dejar una marca positiva en el mundo a través de mi trabajo en desarrollo web, combinando estética y funcionalidad.",
 
   "Title_Habil": "Habilidades",
 
