--- a/src/i18n/Ingles/en.json
+++ b/src/i18n/Ingles/en.json
@@ -12,11 +12,7 @@
 
   "Titu_Acerca": "About me",
 
-  "TxtAcerca1": "I am a creativity enthusiast with a deep love for architecture, programming, design and DIY. From my early fascination with architectural spaces to my passion for coding and innovative design, I find in every field an opportunity to express my creativity and skills.",
-
-  "TxtAcerca2": "Architecture captivates me with its ability to influence our lives and emotions through the spaces it creates. Programming allows me to transform abstract ideas into tangible digital solutions. Meanwhile, design and DIY offer me a tangible canvas where I can uniquely fuse aesthetics and functionality. In each project, I seek to explore new limits, challenge myself, and find beauty at the intersection of form and function.",
-  
-  "TxtAcerca3":"My world is defined by the constant search for new experiences and creative challenges. From planning architectural projects to creating technological solutions, every step I take reflects my passion for innovation and design. I am an eternal learner and creator, driven by the desire to leave a positive mark on the world through my work and creativity.",
+  "TxtAcerca1": "I am a creativity enthusiast with a passion for web programming, architecture, design, and DIY. Web programming allows me to transform abstract ideas into tangible digital solutions, creating interactive and functional experiences for users. I constantly seek new experiences and challenges, reflecting my passion for innovation and my desire to make a positive impact on the world through my work in web development, combining aesthetics and functionality.",
 
   "Title_Habil": "Skills",
 
